# pure-pod

./: .env.example  .gitignore  README.md  docker-compose.yml
manager/: Dockerfile  Dockerfile.dev  README.md  requirements.txt
manager/frontend/: package-lock.json  package.json  vite.config.ts
manager/frontend/src/: App.tsx  index.css  vite-env.d.ts
manager/frontend/src/components/: AddFeedForm.tsx  EpisodeTable.tsx  FeedCard.tsx  FeedView.tsx  PasswordGate.tsx  StatusOverview.tsx
manager/frontend/src/components/ui/: badge.tsx  dialog.tsx
manager/frontend/src/hooks/: useWebSocket.ts
manager/frontend/src/lib/: api.ts
manager/frontend/src/types/: api.ts
manager/src/: config.py  database.py  ingest.py  main.py  models.py  storage.py  tasks.py
shared/: celery_config.py  tasks.py
worker/: .env.example  README.md  pyproject.toml
worker/scripts/: PurePod Worker.applescript  download_models.py  download_models.scpt  start_worker.scpt
worker/scripts/PurePod Worker.app/Contents/: Info.plist
worker/scripts/PurePod Worker.app/Contents/Resources/Scripts/: main.scpt
worker/worker/: main.py
