[project]
name = "podcast-purifier-worker"
version = "0.1.0"
description = "ML Worker for PodcastPurifier - strips ads from podcasts using MLX"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "mlx-whisper>=0.1.0",
    "mlx-lm>=0.1.0",
    "pydub>=0.25.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
